# scarab

./: output.avi
dynamic_logistics_warehouse/: CMakeLists.txt  package.xml
dynamic_logistics_warehouse/config/: dynamic_obstacle.yaml
dynamic_logistics_warehouse/launch/: camera_system.launch  human_actor_warehouse.launch  logistics_warehouse.launch  logistics_warehouse_no_actor.launch
dynamic_logistics_warehouse/models/aws_robomaker_warehouse_PalletJackB_01/: model.sdf
dynamic_logistics_warehouse/models/moving_PalletJack1/: model.sdf
dynamic_logistics_warehouse/models/moving_PalletJack2/: model.sdf
dynamic_logistics_warehouse/models/moving_actor/: model.config
dynamic_logistics_warehouse/models/moving_clutter1/: model.sdf
dynamic_logistics_warehouse/models/moving_clutter2/: model.sdf
dynamic_logistics_warehouse/models/moving_clutter3/: model.sdf
dynamic_logistics_warehouse/models/moving_clutter4/: model.sdf
dynamic_logistics_warehouse/models/moving_clutter5/: model.sdf
dynamic_logistics_warehouse/models/moving_object1/: model.config  model.urdf
dynamic_logistics_warehouse/models/moving_object2/: model.config  model.urdf
dynamic_logistics_warehouse/models/moving_object3/: model.config  model.urdf
dynamic_logistics_warehouse/models/moving_object4/: model.config  model.urdf
dynamic_logistics_warehouse/src/: object_mover.cpp
dynamic_logistics_warehouse/worlds/: adjusted_smaller_warehouse.world  better_warehouse.world  better_warehouse_no_actor.world  empty_wall.world  smaller_warehouse.world  smaller_warehouse_with_light.world
(+34 files in other folders)
